fix / careers page, force we-are-all floating widget to be hidden under 768px

--- a/public/css/pages/careers.less
+++ b/public/css/pages/careers.less
@@ -136,7 +136,7 @@
   }
 
   .we-are-all-widget {
-    display: none;
+    display: none!important;
   }
 
   .were-all-item,
